--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
-    "wsgi.py": {
+    "app.py": {
       "runtime": "python3.9",
+      "handler": "app.app",
       "maxDuration": 30
     }
   },
