--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "functions": {
-    "app.py": {
-      "runtime": "python3.9",
-      "handler": "app.app",
-      "maxDuration": 30
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.py"
+      "dest": "app.py"
     }
   ]
 }
